# z80computer

./: .gitignore  .gitmodules  README.md  sdcard.py  send.py
fpga/: Makefile  fpga.pcf  test.mem  top.v
rtl/: .gitignore  top.v  z80computer.v
sim/: CMakeLists.txt  Makefile  console.cpp  console.h  debug.asm  defs.asm  disk.cpp  disk.h  getc.cpp  getc.h  pll.v  sdcard.asm  sdcard.cpp  sdcard.h  sim.cpp  sim.gtkw  spi.asm  test.asm  uart.asm
sw/cpm22/: Makefile
sw/os/: Makefile  bios.asm  dph.asm  hexdump.asm  main.asm  puts.asm  symbols.py
sw/test/: Makefile  debug.asm  defs.asm  hexdump.asm  make-rom.py  puts.asm  sdcard.asm  spi.asm  test.asm  uart.asm
